# magmar

./: Cargo.toml  LICENSE  conf.lua  conjunto6.csv  main.lua  read_stdin.lua  run.sh  screen.lua  signal.lua  storage.lua  third_order_system.csv  tooltip.lua  viewport.lua
src/: aim.rs  drawable.rs  grid.rs  legend.rs  main.rs  screen.rs  signal.rs  state.rs  stdin_task.rs  theme.rs  title.rs  toolbar.rs  tooltip.rs  viewport.rs  x_axis.rs  x_label.rs  y_axis.rs  y_label.rs
